packages/yew-macro/tests/function_component_attr/multiple-param-fail.stderr
error: function components can accept at most one parameter for the props
 --> $DIR/multiple-param-fail.rs:9:24
  |
9 | fn comp(props: &Props, invalid: String) -> Html {
  |                        ^^^^^^^^^^^^^^^

error: function components can accept at most one parameter for the props
  --> $DIR/multiple-param-fail.rs:19:25
   |
19 | fn comp3(props: &Props, invalid: String, another_invalid: u32) -> Html {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
